--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-asgiref==3.5.2
-Django==4.0.8
-gunicorn==20.1.0
-sqlparse==0.4.3
+asgiref==3.8.1
+Django==5.1.6
+python-decouple==3.8
+sqlparse==0.5.3
